add draw board and fill start position figure

--- a/src/Main.vm
+++ b/src/Main.vm
@@ -1,7 +1,8 @@
-function Main.main 0
-push constant 0
-not
-call Screen.setColor 1
+function Main.main 1
+call Game.new 0
+pop local 0
+push local 0
+call Game.DrawAll 1
 pop temp 0
 push constant 0
 return
